--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,7 +1,7 @@
 name: Report a bug
 description: Tell us about your issue.
 title: "Provide a general summary of the issue"
-assignees: "-"
+labels: ["Type: bug", "State: Triage"]
 body:
   - type: checkboxes
     attributes:
