--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "name": "Jonathan Peterson"
   },
   "name": "@eonasdan/tempus-dominus",
-  "version": "6.1.2",
+  "version": "6.1.3",
   "style": "dist/css/tempus-dominus.css",
   "sass": "scss/tempus-dominus.scss",
   "main": "dist/js/tempus-dominus.js",
@@ -39,9 +39,8 @@
   "description": "A robust and powerful date/time picker component. For usage, installation and demos see Project Site on GitHub",
   "devDependencies": {
     "@popperjs/core": "^2.11.6",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-typescript": "^8.5.0",
-    "@types/node": "^18.7.18",
+    "@rollup/plugin-node-resolve": "^14.1.0",
+    "@types/node": "^18.7.20",
     "bootstrap": "^5.2.1",
     "browser-sync": "^2.27.10",
     "chokidar": "^3.5.3",
@@ -56,7 +55,7 @@
     "rollup": "^2.79.1",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "0.34.0",
+    "rollup-plugin-ts": "^3.0.2",
     "sass": "^1.55.0",
     "terser": "^5.15.0",
     "tslib": "^2.4.0",
