--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
-    "module": "es2020",
-    "target": "ES6",
-    "lib": ["es6", "dom", "es2016", "es2017", "dom.iterable", "es2019", "ES2021.String"],
+    "module": "ES2020",
+    "target": "ES2020",
+    "lib": ["es6", "dom", "es2016", "es2017", "dom.iterable", "es2019", "ES2021"],
     "moduleResolution": "node",
     "rootDir": "./src/js",
+    "declaration": true,
     "declarationDir": "./types",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true
