--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,7 +1,7 @@
 name: Feature request
 description: Suggest new or updated features.
 title: "Suggest a new feature"
-labels: ["Type: feature request"]
+labels: ["Type: feature request", "State: Triage"]
 assignees: []
 body:
   - type: checkboxes
