--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jsdom": "^20.0.0",
     "prettier": "^2.7.1",
     "rollup": "^2.79.1",
+    "rollup-plugin-ignore": "^1.0.10",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-ts": "^3.0.2",
