--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "terser": "^5.15.0",
     "tslib": "^2.4.0",
     "typescript": "~4.8.3",
-    "vitest": "^0.24.5"
+    "vitest": "^0.24.5",
+    "vitest-github-actions-reporter": "^0.9.0"
   },
   "homepage": "https://getdatepicker.com/",
   "keywords": [
