--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "name": "Jonathan Peterson"
   },
   "name": "@eonasdan/tempus-dominus",
-  "version": "6.2.6",
+  "version": "6.2.7",
   "style": "dist/css/tempus-dominus.css",
   "sass": "scss/tempus-dominus.scss",
   "main": "dist/js/tempus-dominus.js",
@@ -17,6 +17,9 @@
   ],
   "scripts": {
     "start": "npm run build && concurrently \"npm:*-watch\" \"npm run serve\"",
+    "test": "vitest",
+    "test:silent": "vitest --run --silent",
+    "coverage": "vitest run --coverage",
     "serve": "browser-sync start --config build/browser-sync-config.js",
     "build": "node ./build/copyToDist.js && npm run rollup && npm run build:plugins-and-locales",
     "build:plugins": "node ./build/plugins.js -p",
@@ -29,7 +32,7 @@
     "prettier": "prettier --write .",
     "docs": "node ./src/docs/make.js",
     "docs-watch": "node ./src/docs/make.js --watch",
-    "release": "npm run build && npm run build:declarations",
+    "release": "npm run test:silent && npm run build && npm run build:declarations",
     "release:version": "npm run release && node build/change-version.js"
   },
   "bugs": {
@@ -43,6 +46,7 @@
     "@popperjs/core": "^2.11.6",
     "@rollup/plugin-node-resolve": "^14.1.0",
     "@types/node": "^18.7.20",
+    "@vitest/coverage-c8": "^0.24.5",
     "bootstrap": "^5.2.1",
     "browser-sync": "^2.27.10",
     "chokidar": "^3.5.3",
@@ -55,13 +59,16 @@
     "jsdom": "^20.0.0",
     "prettier": "^2.7.1",
     "rollup": "^2.79.1",
+    "rollup-plugin-ignore": "^1.0.10",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-ts": "^3.0.2",
     "sass": "^1.55.0",
     "terser": "^5.15.0",
     "tslib": "^2.4.0",
-    "typescript": "~4.8.3"
+    "typescript": "~4.8.3",
+    "vitest": "^0.24.5",
+    "vitest-github-actions-reporter": "^0.9.0"
   },
   "homepage": "https://getdatepicker.com/",
   "keywords": [
