--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,15 @@
   "compilerOptions": {
     "module": "ES2020",
     "target": "ES2020",
-    "lib": ["es6", "dom", "es2016", "es2017", "dom.iterable", "es2019", "ES2021"],
+    "lib": [
+      "es6",
+      "dom",
+      "es2016",
+      "es2017",
+      "dom.iterable",
+      "es2019",
+      "ES2021"
+    ],
     "moduleResolution": "node",
     "rootDir": "./src/js",
     "declaration": true,
