--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
     "docs": "node ./src/docs/make.js",
     "docs-watch": "node ./src/docs/make.js --watch",
     "release": "npm run test:silent && npm run build && npm run build:declarations",
-    "release:version": "npm run release && node build/change-version.js"
+    "release:version": "npm run release && node build/change-version.js",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   },
   "bugs": {
     "url": "https://github.com/eonasdan/tempus-dominus/issues"
@@ -56,7 +60,9 @@
     "glob": "^7.2.3",
     "globby": "^11.1.0",
     "html-minifier-terser": "^5.1.1",
+    "husky": "^8.0.1",
     "jsdom": "^20.0.2",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "rollup": "^2.79.1",
     "rollup-plugin-ignore": "^1.0.10",
