--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "@popperjs/core": "^2.11.6",
     "@rollup/plugin-node-resolve": "^14.1.0",
     "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
     "@vitest/coverage-c8": "^0.24.5",
     "bootstrap": "^5.2.2",
     "browser-sync": "^2.27.10",
@@ -57,6 +59,8 @@
     "clean-css": "^5.3.1",
     "concurrently": "^7.5.0",
     "dropcss": "^1.0.16",
+    "eslint": "^8.26.0",
+    "eslint-config-prettier": "^8.5.0",
     "glob": "^7.2.3",
     "globby": "^11.1.0",
     "html-minifier-terser": "^5.1.1",
