--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Npm install
         run: npm ci
       - name: Unit tests
-        run: npm run test:silent
+        run: npm run test:coverage
       # Send coverage report to Coveralls
       - name: Coveralls
         uses: coverallsapp/github-action@master
