--- a/package.json
+++ b/package.json
@@ -51,8 +51,13 @@
   "bugs": {
     "url": "https://github.com/eonasdan/tempus-dominus/issues"
   },
-  "optionalDependencies": {
-    "@popperjs/core": "^2.10.1"
+  "peerDependencies": {
+    "@popperjs/core": "^2.11.6"
+  },
+  "peerDependenciesMeta": {
+    "@popperjs/core\"": {
+      "optional": true
+    }
   },
   "description": "A robust and powerful date/time picker component. For usage, installation and demos see Project Site on GitHub",
   "devDependencies": {
