--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,9 @@
     "experimentalDecorators": true
   },
   "include": ["./src/js/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules",
+    "./src/js/plugins/**/*.ts",
+    "./src/js/locales/**/*.ts"
+  ]
 }
