--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,6 +17,10 @@ jobs:
         run: npm run test:coverage
       - name: Build docs
         run: npm run docs
+      - name: 'Qodana Scan'
+        uses: JetBrains/qodana-action@main
+        env:
+          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
       # Send coverage report to Coveralls
       - name: Coveralls
         uses: coverallsapp/github-action@master
