--- a/.github/workflows/feature-branch.yaml
+++ b/.github/workflows/feature-branch.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    uses: ./build.yaml
+    uses: ./build.yaml@v1
     secrets: inherit
   publish:
     runs-on: ubuntu-latest
