--- a/.github/workflows/feature-branch.yaml
+++ b/.github/workflows/feature-branch.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    uses: ./.github/workflows/build.yaml@v1
+    uses: ./.github/workflows/build.yaml
     secrets: inherit
   publish:
     runs-on: ubuntu-latest
