--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 jobs:
   build:
-    uses: ./.github/workflows/build.yaml@v1
+    uses: ./.github/workflows/build.yaml
     secrets: inherit
   publish:
     runs-on: ubuntu-latest
