--- a/.github/workflows/feature-branch.yaml
+++ b/.github/workflows/feature-branch.yaml
@@ -12,6 +12,13 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
+      - name: Set package version
+        run: |
+          BRANCH_NAME=${GITHUB_REF#refs/heads/}
+          BRANCH_NAME=${BRANCH_NAME#feature/} # remove "feature/" prefix
+          BUILD_ID=$(echo $GITHUB_RUN_ID | cut -c1-7)
+          VERSION=$(node -p "const pkg = require('./package.json'); pkg.version + '+build.' + BRANCH_NAME + '.' + BUILD_ID")
+          sed -i "s/\"version\": \".*\"/\"version\": \"$VERSION\"/g" package.json
       - name: Publish package
         run: |
           if [[ ${{ github.ref }} == "refs/heads/feature/*" ]]; then
