--- a/.github/workflows/feature-branch.yaml
+++ b/.github/workflows/feature-branch.yaml
@@ -10,12 +10,13 @@ jobs:
     uses: ./.github/workflows/build.yaml
     secrets: inherit
   publish:
+    needs: build
     runs-on: ubuntu-latest
     #if: startsWith(github.ref, 'refs/heads/feature/') && contains(github.event.head_commit.message, '[release]')
     steps:
       - name: Set package version
         run: |
-          BRANCH_NAME=${GITHUB_REF#refs/heads/}
+          BRANCH_NAME=${github.event.inputs.arch}
           BRANCH_NAME=${BRANCH_NAME#feature/} # remove "feature/" prefix
           BUILD_ID=$(echo $GITHUB_RUN_ID | cut -c1-7)
           VERSION=$(node -p "const pkg = require('./package.json'); pkg.version + '+build.' + BRANCH_NAME + '.' + BUILD_ID")
