--- a/.github/workflows/feature-branch.yaml
+++ b/.github/workflows/feature-branch.yaml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - name: Set package version
         run: |
-          BRANCH_NAME=${github.event.inputs.arch}
+          BRANCH_NAME=${BRANCH_NAME=${GITHUB_REF#refs/heads/}}
           BRANCH_NAME=${BRANCH_NAME#feature/} # remove "feature/" prefix
           BUILD_ID=$(echo $GITHUB_RUN_ID | cut -c1-7)
           VERSION=$(node -p "const pkg = require('./package.json'); pkg.version + '+build.' + BRANCH_NAME + '.' + BUILD_ID")
