--- a/.github/workflows/feature-branch.yaml
+++ b/.github/workflows/feature-branch.yaml
@@ -4,25 +4,23 @@ on:
   push:
     branches:
       - 'feature/*'
+      - development
 
 jobs:
-  steps:
-    - name: Set package version
-      run: |
-        pwd
-        BRANCH_NAME=${BRANCH_NAME=${GITHUB_REF#refs/heads/}}
-        BRANCH_NAME=${BRANCH_NAME#feature/} # remove "feature/" prefix
-        BUILD_ID=$(echo $GITHUB_RUN_ID | cut -c1-7)
-        VERSION=$(node -p "const pkg = require('./package.json'); pkg.version + '+build.' + BRANCH_NAME + '.' + BUILD_ID")
-        sed -i "s/\"version\": \".*\"/\"version\": \"$VERSION\"/g" package.json
-  build:
-    uses: ./.github/workflows/build.yaml
-    secrets: inherit
-  publish:
-    needs: build
+  main:
     runs-on: ubuntu-latest
-    #if: startsWith(github.ref, 'refs/heads/feature/') && contains(github.event.head_commit.message, '[release]')
     steps:
+      - name: Set package version
+        run: |
+          pwd
+          BRANCH_NAME=${BRANCH_NAME=${GITHUB_REF#refs/heads/}}
+          BRANCH_NAME=${BRANCH_NAME#feature/} # remove "feature/" prefix
+          BUILD_ID=$(echo $GITHUB_RUN_ID | cut -c1-7)
+          VERSION=$(node -p "const pkg = require('./package.json'); pkg.version + '+build.' + BRANCH_NAME + '.' + BUILD_ID")
+          sed -i "s/\"version\": \".*\"/\"version\": \"$VERSION\"/g" package.json
+      - name: Build
+        uses: ./.github/workflows/build.yaml
+        secrets: inherit
       - name: Publish package
         run: |
           npm publish --access public --registry https://npm.pkg.github.com/
