--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,16 +5,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-      - name: Npm install
-        run: npm ci
+#      - name: Checkout
+#        uses: actions/checkout@v3
+#      - name: Setup Node
+#        uses: actions/setup-node@v3
+#        with:
+#          node-version: '18'
+#      - name: Npm install
+#        run: npm ci
       - name: Unit tests
         run: npm run test:coverage
+      - name: Build
+        run: npm run build
       - name: Build docs
         run: npm run docs
       - name: 'Qodana Scan'
