--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,13 +4,13 @@ on:
     types: [ created ]
   workflow_dispatch:
 jobs:
-  build:
-    uses: ./.github/workflows/build.yaml
-    secrets: inherit
   publish:
-    needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout and install
+        uses: ./.github/workflows/base.yaml
+      - name: Build
+        uses: ./.github/workflows/build.yaml
       - name: Deploy Docs
         uses: peaceiris/actions-gh-pages@v3
         with:
