--- a/.github/workflows/base.yaml
+++ b/.github/workflows/base.yaml
@@ -2,8 +2,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+#      - name: Checkout
+#        uses: actions/checkout@v3
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
