--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,7 +7,9 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout and install
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: npm install
         uses: ./.github/workflows/base.yaml
       - name: Build
         uses: ./.github/workflows/build.yaml
