update feature-branch.yaml 856

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,6 +4,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    # First part is the name of the file and the second part is the name of the job.
+    needs: base.prep
     steps:
 #      - name: Checkout
 #        uses: actions/checkout@v3
