--- a/.github/workflows/feature-branch.yaml
+++ b/.github/workflows/feature-branch.yaml
@@ -14,8 +14,9 @@ jobs:
     steps:
 #      - name: Checkout
 #        uses: actions/checkout@v3
-      - name: npm install
-        uses: ./base.yaml
+      - name: Checkout
+        extends:
+          - ./.github/workflows/base.yaml
       - name: Set package version
         run: |          
           BRANCH_NAME=${BRANCH_NAME=${GITHUB_REF#refs/heads/}}
@@ -24,7 +25,8 @@ jobs:
           VERSION=$(node -p "const pkg = require('${{ github.workspace }}/package.json'); pkg.version + '+build.' + BRANCH_NAME + '.' + BUILD_ID")
           sed -i "s/\"version\": \".*\"/\"version\": \"$VERSION\"/g" ${{ github.workspace }}/package.json
       - name: Build
-        uses: ./build.yaml
+        extends:
+          - ./.github/workflows/build.yaml
       - name: Publish package
         run: |
           npm publish --access public --registry https://npm.pkg.github.com/
