--- a/.github/workflows/feature-branch.yaml
+++ b/.github/workflows/feature-branch.yaml
@@ -14,6 +14,7 @@ jobs:
   build:
     uses: ./.github/workflows/build.yaml
     secrets: inherit
+    needs: build
   main:
     needs: build
     runs-on: ubuntu-latest
