--- a/.github/workflows/feature-branch.yaml
+++ b/.github/workflows/feature-branch.yaml
@@ -14,7 +14,7 @@ jobs:
   build:
     uses: ./.github/workflows/build.yaml
     secrets: inherit
-    needs: build
+    needs: base
   main:
     needs: build
     runs-on: ubuntu-latest
