--- a/.github/workflows/feature-branch.yaml
+++ b/.github/workflows/feature-branch.yaml
@@ -15,6 +15,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
   base:
+    needs: checkout
     uses: ./.github/workflows/base.yaml
   build:
     uses: ./.github/workflows/build.yaml
