--- a/.github/workflows/feature-branch.yaml
+++ b/.github/workflows/feature-branch.yaml
@@ -25,6 +25,8 @@ jobs:
     #needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Setup
         uses: ./.github/workflows/base.yaml
       - name: Build
