--- a/.github/workflows/feature-branch.yaml
+++ b/.github/workflows/feature-branch.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Setup
-        uses: ./.github/workflows/base.yaml
+        uses: ./.github/workflows/base
       - name: Build
         uses: ./.github/workflows/build.yaml
 #      - name: Checkout
