update feature-branch.yaml 1426

--- a/.github/workflows/feature-branch.yaml
+++ b/.github/workflows/feature-branch.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: Setup
         uses: ./.github/workflows/base
       - name: Build
-        uses: ./.github/workflows/build.yaml
+        uses: ./.github/workflows/build
 #      - name: Checkout
 #        uses: actions/checkout@v3
 #      - name: Checkout
