--- a/.github/workflows/feature-branch.yaml
+++ b/.github/workflows/feature-branch.yaml
@@ -14,28 +14,28 @@ jobs:
 #    steps:
 #      - name: Checkout
 #        uses: actions/checkout@v3
-#  base:
-#    needs: checkout
-#    uses: ./.github/workflows/base.yaml
-#  build:
-#    uses: ./.github/workflows/build.yaml
-#    secrets: inherit
-#    needs: base
+  base:
+    #needs: checkout
+    uses: ./.github/workflows/base.yaml
+  build:
+    uses: ./.github/workflows/build.yaml
+    secrets: inherit
+    needs: base
   main:
     #needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup
-        uses: ./.github/workflows/base
-      - name: Build
-        uses: ./.github/workflows/build
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
 #      - name: Checkout
 #        uses: actions/checkout@v3
+#      - name: Setup
+#        uses: ./.github/workflows/base
+#      - name: Build
+#        uses: ./.github/workflows/build
+#        with:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
+      - name: Checkout
+        uses: actions/checkout@v3
 #      - name: Checkout
 #        extends:
 #          - ./.github/workflows/base.yaml
