--- a/.github/workflows/feature-branch.yaml
+++ b/.github/workflows/feature-branch.yaml
@@ -43,8 +43,9 @@ jobs:
         run: |
           BRANCH_NAME=${GITHUB_REF#refs/heads/}
           BRANCH_NAME=${BRANCH_NAME#feature/} # remove "feature/" prefix
+          echo BRANCH_NAME
           BUILD_ID=$(echo $GITHUB_RUN_ID | cut -c1-7)
-          VERSION=$(node -p "const pkg = require('${{ github.workspace }}/package.json'); pkg.version + '+build.' + BRANCH_NAME + '.' + BUILD_ID")
+          VERSION=$(node -p "const pkg = require('./package.json'); pkg.version + '+build.' + $BRANCH_NAME + '.' + BUILD_ID")
           sed -i "s/\"version\": \".*\"/\"version\": \"$VERSION\"/g" ${{ github.workspace }}/package.json
 #      - name: Build
 #        extends:
