--- a/.github/workflows/feature-branch.yaml
+++ b/.github/workflows/feature-branch.yaml
@@ -47,7 +47,8 @@ jobs:
           BUILD_ID=$(echo $GITHUB_RUN_ID | cut -c1-7)
           VERSION=$(node -p "const pkg = require('./package.json'); pkg.version)
           VERSION="$VERSION-build.$BRANCH_NAME.$BUILD_ID"
-          sed -i "s/\"version\": \".*\"/\"version\": \"$VERSION\"/g" ./package.json
+          #sed -i "s/\"version\": \".*\"/\"version\": \"$VERSION\"/g" ./package.json
+          sed -i '' "s/\"version\": \".*\"/\"version\": \"$VERSION\"/" package.json
 #      - name: Build
 #        extends:
 #          - ./.github/workflows/build.yaml
