--- a/.github/workflows/feature-branch.yaml
+++ b/.github/workflows/feature-branch.yaml
@@ -48,7 +48,8 @@ jobs:
           VERSION=$(node -p "const pkg = require('./package.json'); pkg.version)
           VERSION="$VERSION-build.$BRANCH_NAME.$BUILD_ID"
           #sed -i "s/\"version\": \".*\"/\"version\": \"$VERSION\"/g" ./package.json
-          sed -i '' "s/\"version\": \".*\"/\"version\": \"$VERSION\"/" package.json
+          #sed -i '' "s/\"version\": \".*\"/\"version\": \"$VERSION\"/" package.json
+          jq --arg new_version "$VERSION" '.version = $VERSION' package.json > tmp.json && mv tmp.json package.json
 #      - name: Build
 #        extends:
 #          - ./.github/workflows/build.yaml
