--- a/.github/workflows/base/action.yaml
+++ b/.github/workflows/base/action.yaml
@@ -1,6 +1,11 @@
 name: Setup Node
 description: Setup node
 
+inputs:
+  registry:
+    description: 'A Github PAT'
+    default: 'https://registry.npmjs.org'
+
 runs:
   using: composite
   steps:
@@ -8,6 +13,7 @@ runs:
         uses: actions/setup-node@v3
         with:
           node-version: '18'
+          registry-url: ${{ inputs.registry }}
       - name: Npm install
         shell: bash
         run: npm ci
