--- a/.github/workflows/feature-branch.yaml
+++ b/.github/workflows/feature-branch.yaml
@@ -19,6 +19,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup
         uses: ./.github/workflows/base
+        with:
+          registry: 'https://npm.pkg.github.com'
       - name: Set package version
         run: |
           BRANCH_NAME=${GITHUB_REF#refs/heads/}
